# GraphicsGorilla

./: CMakeLists.txt  GraphicsGorilla.cpp  GraphicsGorilla.hpp  vcpkg.json
2D/Primitives/Filled/: Circle.cpp  Rectangle.cpp  Triangle.cpp
2D/Primitives/Outline/: Circle.cpp  Rectangle.cpp  Triangle.cpp
2D/Primitives/Rounded/Filled/: Rectangle.cpp  Triangle.cpp
2D/Primitives/Rounded/Outline/: Rectangle.cpp  Triangle.cpp
2D/Primitives/Rounded/Stroked/: Rectangle.cpp  Triangle.cpp
2D/Primitives/Stroked/: Circle.cpp  Rectangle.cpp  Triangle.cpp
2D/Text/: Font.cpp  Font.hpp
Color/: Color.cpp
Framebuffer/: FrameBuffer.cpp
Window/: Window.hpp
